# RL-Episode-Inspector

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/: recorder.yaml  viewer_demo.yaml
docs/: architecture.md  data_format.md  developer_guide.md  isaac_lab_integration.md  overview_ru.md  roadmap.md  security.md  testing.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/e2e/: episode_viewer.spec.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ArticulationViewer.tsx  CombinedRewardChart.tsx  CurrentValuesPanel.tsx  EpisodeSelector.tsx  ErrorState.tsx  HelpModal.tsx  LoadingState.tsx  MetadataPanel.tsx  MultiAgentRewards.tsx  ReachViewer.tsx  RewardCharts.tsx  SignalCharts.tsx  TimeSeriesChart.tsx  TimelineControls.tsx  Viewer3D.tsx  rewardSeries.test.ts  rewardSeries.ts
frontend/src/playback/: frameSync.ts  (+5 more)
python/rl_episode_inspector/: __init__.py  cli.py
sample_data/cartpole/: README.md
sample_data/reach/: README.md
tests/: conftest.py
tests/integration/: test_api_server.py  test_record_save_load.py
tests/isaaclab/: test_cartpole_integration.py
tests/unit/: test_cartpole_reward.py  test_data_schema.py  test_episode_loader.py  test_episode_ranker.py  test_episode_recorder.py  test_fake_data_generator.py  test_humanoid_replay.py  test_multiagent_rewards.py  test_pose_recording.py  test_reach_reward.py  test_scene_lights.py  test_signal_schema.py  test_storage_validation.py  test_tracked_signals.py
(+110 files in other folders)
